# autoscoring-2025

./: judge_list.csv  main.py  normalize_round1_data.csv  project_list.csv  pyproject.toml  sample_round1_data.csv  sample_round2_data.csv  simulated_scores.csv  simulated_scores_2.csv
autoscorer/: assign_judge_query.py  round1_query.py  round2_query.py  spreadsheet_reader.py
